--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,35 +11,36 @@
         android:id="@+id/txtYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="76dp"
         android:text="Enter you Year of Birth:"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.238"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/inputYear"
-        android:layout_width="90dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="286dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColorHint="#4E4E4E"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.305"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtYear" />
 
     <Button
         android:id="@+id/btnSubmit"
-        android:layout_width="87dp"
-        android:layout_height="38dp"
+        android:layout_width="119dp"
+        android:layout_height="51dp"
         android:layout_marginTop="60dp"
         android:background="@color/colorPrimary"
         android:onClick="onSubmit"
         android:text="SUBMIT"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
